--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<!-- app header to be shown everywhere  where the router-outlet changes to the component we chose -->
 <app-header></app-header>
-<router-outlet>
+<router-outlet></router-outlet>
