--- a/src/app/components/relations/relations.component.html
+++ b/src/app/components/relations/relations.component.html
@@ -1,3 +1,5 @@
+      <!-- Table containing all the users in the database and their relation ? "relations still in progress". -->
+
 <mat-form-field appearance="standard">
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
