relations showing with click all good

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -3,7 +3,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link "  routerLink="/">Ajouter une personne</a>
-        <a class="nav-item nav-link "  routerLink="/relations">Relations </a>
+        <a class="nav-item nav-link "  routerLink="/peoples">Peoples </a>
  
       </div>
     </div>
