--- a/src/app/components/relations/relations.component.css
+++ b/src/app/components/relations/relations.component.css
@@ -11,3 +11,12 @@ td,
 th {
   width: 25%;
 }
+
+.mat-row:hover .mat-cell {
+  border-color: currentColor;
+}
+.mat-row .mat-cell {
+  border-bottom: 1px solid transparent;
+  border-top: 1px solid transparent;
+  cursor: pointer;
+}
