Styled all good working

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,10 +1,8 @@
-<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark ">
-   
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link "  routerLink="/">Ajouter une personne</a>
-        <a class="nav-item nav-link "  routerLink="/peoples">Peoples </a>
- 
-      </div>
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link" routerLink="/">Ajouter une personne</a>
+      <a class="nav-item nav-link" routerLink="/peoples">utilisateurs</a>
     </div>
-  </nav>
+  </div>
+</nav>
