--- a/src/app/components/peoples/peoples.component.html
+++ b/src/app/components/peoples/peoples.component.html
@@ -1,5 +1,5 @@
 <!-- Table containing all the users in the database and their relation ? "relations still in progress". -->
-    <mat-form-field appearance="standard">
+<mat-form-field appearance="standard">
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input />
 </mat-form-field>
@@ -11,37 +11,41 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
       <td mat-cell *matCellDef="let row">{{ row.id }}</td>
     </ng-container>
+    <!-- NOM Column -->
 
     <ng-container matColumnDef="nom">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>nom</th>
       <td mat-cell *matCellDef="let row">{{ row.nom }}</td>
     </ng-container>
+    <!-- PRENOM Column -->
 
     <ng-container matColumnDef="prenom">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>prenom</th>
       <td mat-cell *matCellDef="let row">{{ row.prenom }}</td>
     </ng-container>
+    <!-- EMAIL Column -->
+
     <ng-container matColumnDef="email">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>email</th>
       <td mat-cell *matCellDef="let row">{{ row.email }}</td>
     </ng-container>
+    <!-- PAYS Column -->
+
     <ng-container matColumnDef="pays">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>pays</th>
       <td mat-cell *matCellDef="let row">{{ row.pays }}</td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr
+    <tr
       mat-row
-      (click)="clicked(row)"
-      *matRowDef="let row; columns: displayedColumns;"
-  ></tr>
+      (click)="checkrUserRelations(row)"
+      *matRowDef="let row; columns: displayedColumns"
+    ></tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">
-        No data matching the filter     
-      </td>
+      <td class="mat-cell" colspan="4">No data matching the filter</td>
     </tr>
   </table>
 
